// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calculate calculates the correct information case 1 1`] = `
Object {
  "globalTotal": 1083.3500000000001,
  "invoices": Array [
    Object {
      "actualSpendings": 1032.3,
      "oweings": 0,
      "person": Object {
        "email": "adam.agar@email.com",
        "firstName": "Adam",
        "id": 1,
        "lastName": "Agar",
      },
      "totalSpendings": 534.84,
    },
    Object {
      "actualSpendings": 51.05,
      "oweings": 497.4599999999999,
      "person": Object {
        "email": "bob.luza@email.com",
        "firstName": "Bob",
        "id": 2,
        "lastName": "luza",
      },
      "totalSpendings": 548.5099999999999,
    },
  ],
}
`;

exports[`calculate calculates the correct information case 2 1`] = `
Object {
  "globalTotal": 38.3,
  "invoices": Array [
    Object {
      "actualSpendings": 19.15,
      "oweings": 0,
      "person": Object {
        "email": "adam.agar@email.com",
        "firstName": "Adam",
        "id": 1,
        "lastName": "Agar",
      },
      "totalSpendings": 19.15,
    },
    Object {
      "actualSpendings": 19.15,
      "oweings": 0,
      "person": Object {
        "email": "bob.luza@email.com",
        "firstName": "Bob",
        "id": 2,
        "lastName": "luza",
      },
      "totalSpendings": 19.15,
    },
  ],
}
`;
